# namer

./: .dockerignore  .env.example  .gitignore  .npmignore  .npmrc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dev-arm64  FFMPEG_DUAL_FILE_MAINTENANCE.md  MAKE_SUGGESTIONS.md  Makefile  README.md  REVIEWER_ACTION_ITEMS.md  SECURITY.md  STASHDB_STATUS.md  WARP.md  build.sh  compose-debug.yaml  compose-prod.yaml  docker-compose.yaml  docker-compose.yml  docker-entrypoint-dev.sh  docker-entrypoint-user.sh  docker-entrypoint.sh  docker_build.sh  namer-backlog.cfg  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  readme.rst  release.sh  sonar-project.properties  validate.sh
.agent/: README.md  memory.json
.claude-audit/: .gitignore  ANALYSIS_SUMMARY.md  COMMAND_INVENTORY_TEMPLATE.md  COMMAND_OPTIMIZATION_PROPOSAL_TEMPLATE.md  GETTING_STARTED.md  INDEX.md  OPTIMIZATION_FRAMEWORK.md  README.md  analyze-commands.sh  quick-check.sh
.claude/agents/: oracle.md
.codacy/: cli.sh  codacy.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/ISSUES/: 2025-10-03-tracking-polish.md
.github/workflows/: claude-code-review.yml  claude.yml  docker-build.yml  pr-container-smoke.yml  pr-validate.yml  release-bump.yml  release-tag.yml  schema-drift-check.yml
.husky/: pre-commit
.windsurf/rules/: review-pr-comments.md  solid-design-principles.md
.windsurf/workflows/: codacy-check-coverage.md  codacy-fix-issues.md  pr-triage-feedback.md
config/: namer.cfg
docker/: .env.template  README.md  docker-compose.yml  namer-backlog.cfg  namer-cache.cfg
docs/: GPU-DETECTION-FIX.md  GRAPHQL_MIGRATION.md  HASHING_ISSUE_FIX.md  README-DISAMBIGUATION.md  README-GPU-ACCELERATION.md  README-INTEL-GPU.md  atomic-moves-proposal.md  backlog-strategy.md  delivery-plan-fix-ambiguity-review.md  dual-instance-architecture.md  dx-knowledge-management-overhaul.md  dx-knowledge-management-prompt-review.md  file-ownership-fix.md  github-issues-summary.md  hashing_issue.md  install_instructions.md  migration-plan-fix-ambiguity-review.md  migration-utilities.md  optimize-test-video.md  remote-builds.md  theporndb_graphql_schema.md  unraid-optimization.md  workstream-a-cicd.md  workstream-b-security.md  workstream-c-refactoring.md  workstream-d-features.md  workstream-e-ambiguity.md
docs/api/: SCHEMA_MAINTENANCE.md  graphql-schemas-research.md  graphql_schema_documentation.md  graphql_schemas_report.json  (+2 more)
namer/: __main__.py  command.py  comparison_results.py  configuration.py  configuration_utils.py  disambiguation.py  ffmpeg.py  ffmpeg_common.py  ffmpeg_enhanced.py  ffmpeg_impl.py  fileinfo.py  http.py  logging_utils.py  metadataapi.py  moviexml.py  namer.cfg.default  namer.py  videohashes.py  watchdog.py
scripts/: build-orbstack.sh  capture-coderabbit-feedback.sh  check-orbstack.sh  check-schema-drift.sh  check-updates.sh  cleanup.sh  copy-build-files.sh  create-issues-from-coderabbit.sh  deploy-simple.sh  detect-intel-gpu.sh  docker-build-vm.sh  enforce-pnpm.sh  enforce-pre-push.sh  export-docker-image.sh  git-push-wrapper.sh  install-hooks.sh  install-intel-firmware-fast.sh  optimize-test-video.sh  remote-build.sh  run-codacy.sh  run-coderabbit.sh  run-docker-smoke-test.sh  setup-docker-vm.sh  setup-remote-builder.sh  smart-backlog-processor.sh  test-docker.sh  timeout-wrapper.sh  update-schema-docs.sh  validate-before-push.sh
test/: disambiguation_config_validation_test.py  disambiguation_integration_flag_off_test.py  disambiguation_integration_test.py  disambiguation_test.py  namer_ffmpeg_test.py  namer_file_parser_test.py  namer_fileutils_test.py  namer_hwaccel_test.py  namer_logging_test.py  namer_mutagen_test.py  namer_test.py  namer_types_test.py  namer_videophash_test.py  namer_watchdog_test.py  stashdb_gql_test.py  stashdb_phash_ambiguity_test.py  updatejson.sh  utils.py
(+37 files in other folders)
